peac_dev/force-app/main/default/objects/DocumentStatusColumn__mdt/DocumentStatusColumn__mdt.object-meta.xml
<CustomObject>
    <label>DocumentStatusColumn</label>
    <pluralLabel>DocumentStatusColumns</pluralLabel>
</CustomObject>