peac_dev/force-app/main/default/objects/DocumentStatusColumn__mdt/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <label>Display Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>