peac_dev/force-app/main/default/objects/DocumentStatusColumn__mdt/fields/DocumentStatusAPIname__c.field-meta.xml
<CustomField>
    <fullName>DocumentStatusAPIname__c</fullName>
    <label>DocumentStatusAPIname</label>
    <length>25</length>
    <type>Text</type>
</CustomField>