peac_dev/force-app/main/default/objects/DocumentStatusColumn__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <length>2</length>
    <type>Text</type>
</CustomField>