peac_dev/force-app/main/default/objects/DocumentStatusColumn__mdt/fields/ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReadOnly</label>
    <type>Checkbox</type>
</CustomField>