peac_dev/force-app/main/default/objects/DocumentStatusColumn__mdt/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort</label>
    <type>Checkbox</type>
</CustomField>